# timetable

./: README.md  com.github.lainsce.timetable.yml  meson.build
data/: com.github.lainsce.timetable.appdata.xml  com.github.lainsce.timetable.appdata.xml.in  com.github.lainsce.timetable.desktop  com.github.lainsce.timetable.desktop.in  com.github.lainsce.timetable.gschema.xml  com.github.lainsce.timetable.mime.xml  meson.build  style.gresource.xml  stylesheet.css
data/styles/: elementary.css  flat.css  nature.css
debian/: changelog  control  copyright  rules
flatpak/: com.github.lainsce.timetable.json  com.github.lainsce.timetable.yml
meson/: post_install.py
po/: LINGUAS  POTFILES  README.md  ca.po  com.github.lainsce.timetable.pot  da.po  de.po  es.po  fr.po  ja.po  lt.po  nl_NL.po
po/extra/: LINGUAS  da.po  de.po  nl_NL.po
src/: Application.vala  MainWindow.vala
src/Constants/: AppSettings.vala
src/Services/: DBus.vala  DialogServices.vala  FileManager.vala  TaskManager.vala
src/Widgets/: DayColumn.vala  DayColumnListBox.vala  EditableLable.vala  PopoverDialog.vala  Preferences.vala  TaskBox.vala  TaskEventBox.vala  TaskPreferences.vala
